  - KNX: added distinct levels for 'DIM' and 'SCALE' commands that allow
    set values to be configured for buttons, e.g. 'DIM 50' to dim directly
    to 50% (Eric Bariaux, ORCJAVA-71).
  - HTTP protocol: methods GET, POST, PUT and DELETE are now supported.
    For HTTP/JSON return documents, a JSON Path expression is supported.
    Internally, the implementation has been converted to use URIs instead 
    of URLs which resolves an issue with lack of encoding of HTTP parameters 
    which contain which contain white spaces or other special characters 
    (Marcus Redeker)
  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches (Marcus Redeker)
  - Shell Command Execution: polling interval and regular expression
    filtering on return values supported, including regexp groups to 
    read in multiple sensor values at once. Support for using shell
    commands with sliders added (Marcus Redeker, Ivan Martinez)
  - Telnet: polling interval property added (Marcus Redeker)
  - Date/Time : values updated once per minute instead of once per second
    (Marcus Redeker)
  - UDP : send hex values by prefixing command data with '0x' string.
    Receiving of UDP packets added (Marcus Redeker)
  - TCP : send hex values by prefixing command data with '0x' string
    (Marcus Redeker)
  - Samsung SmartTV : support control of multiple Samsung devices in single
    installation (Ivan Martinez)
  - Touch panel gestures can now be bound to macros in addition to individual
    commands (Eric Bariaux, ORCJAVA-231)
  - Color selection widget is now supported by the controller (Eric Bariaux,
    ORCJAVA-235)


Bug Fixes:

  - Performance fix to sensor state cache queries (Marcus Redeker)
  - Runtime performance optimization to avoid unnecessary XML 
    parsing/XPath use (ORCJAVA-190)
  - Fix for JSON REST request return values (Richard Turner, ORCJAVA-254)